/*
 * Copyright 2023, TeamDev. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
syntax = "proto3";

package spine.test.validation;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_multiple_files = true;
option java_outer_classname = "RepeatedTestProto";
option java_package = "io.spine.test.validate";

import "spine/test/validation/messages.proto";

// Messages for testing validation of repeated fields.

message RepeatedNotRequired {
    repeated string unchecked = 1;
}

message RepeatedRegex {
    repeated string regex = 1 [(pattern).regex = "\\w+"];
}

message RepeatedRequired {
    repeated string required_field = 1 [(required) = true];
}

message RepeatedRequiredRegex {
    repeated string bound = 1 [(required) = true, (pattern).regex = "\\w+"];
}

message RepeatedNotRequiredInvalidItem {
    repeated InvalidMessage unchecked = 1;
}

message RepeatedValidateInvalidItem {
    repeated InvalidMessage validated = 1 [(validate) = true];
}

message RepeatedRequiredInvalidItem {
    repeated InvalidMessage required_field = 1 [(required) = true];
}

message RepeatedRequiredValidateInvalidItem {
    repeated InvalidMessage bound = 1 [(validate) = true, (required) = true];
}
